--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-
+<ul>
+    <li>
+        <a routerLink="/admin">admin</a>
+    </li>
+    <li>
+        <a routerLink="/user">user</a>
+    </li>
+</ul>
